use portletrequestutils instead of actionutils for request handling